--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 						<div class="content">
 							<h1>Tuani Siqueira</h1>
 							<p class="major">Maquiadora profissional em São Paulo</p>
-                            <ul class="actions stacked">
-                                <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
+                            <ul class="actions stacked">   
+                                <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Aula de Automaquiagem online</a></li>
+                                <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Consultoria de compras</a></li>
                                 <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
-                                <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Informações sobre cursos</a></li>
-							</ul>
+                                <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
+                            </ul>
 							<ul class="icons align-center">
                                 <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
                                 <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
