--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 					<section class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen orient-center content-align-center image-position-center">
 						<div class="content">
 							<h1>Tuani Siqueira</h1>
-							<p class="major">Maquiadora profissional em São Paulo</p>
+							<p class="major">Maquiadora profissional na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
                                 <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Aula de Automaquiagem online</a></li>
-                                <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Consultoria de compras</a></li>
                                 <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
                                 <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
                             </ul>
