--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<h1>Tuani Siqueira</h1>
 							<p class="major">Maquiadora profissional na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
-                                <li><a href="https://t.me/maquiagensbytuani" class="button large wide smooth-scroll-middle"> MEU CANAL DE DICAS EXCLUSIVAS NO TELEGRAM!!</a></li>
+                                <li><a href="https://t.me/maquiagensbytuani" class="button large wide smooth-scroll-middle"> CANAL DE DICAS EXCLUSIVAS NO TELEGRAM!!</a></li>
                                 <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
 				             <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Cursos AutoMake ou Profissional</a></li>
                                 <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
