--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tuani Siqueira &#8211; Maquiadora profissional em São Paulo</title>
+		<title>Tuani Siqueira &#8211; Maquiadora profissional na Baixada Santista</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 							<h1>Tuani Siqueira</h1>
 							<p class="major">Maquiadora profissional na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
-                                <li><a href="https://t.me/maquiagensbytuani" class="button large wide smooth-scroll-middle">DICAS EXCLUSIVAS NO TELEGRAM!!</a></li>
+                           
                                 <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
-				             <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle"> Conheça meus cursos</a></li>
+				           
                                 <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
                             </ul>
 							<ul class="icons align-center">
