--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/tuani.jpg" alt="" />
+							<img src="images/IMG_3045_jpg.JPG" alt="" />
 						</div>
 					</section>
 
