--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 							<p class="major">Maquiadora profissional na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
                            
-                                <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991538982" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
+                                <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
 				           
                                 <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
                             </ul>
 							<ul class="icons align-center">
                                 <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                                <li><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5513991150428" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+                                <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
                                 <li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 							</ul>
 						</div>
