--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                             <ul class="actions stacked">   
                            
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
-				           
-                                <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
+				       <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Saiba mais sobre cursos</a></li>
+   <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Orçamentos para jobs</a></li>
+				    <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
                             </ul>
 							<ul class="icons align-center">
                                 <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
