--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<h1>Tuani Siqueira</h1>
 							<p class="major">Maquiadora profissional na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
-                           
+                            <li><a href="https://shop.maccosmetics.com.br/?artist=bytuanisiqueira" class="button large wide smooth-scroll-middle">Acesse minha loja na M.A.C</a></li>
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
 				       <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Saiba mais sobre cursos</a></li>
    <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Orçamentos para jobs</a></li>
