--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
 				       <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Saiba mais sobre cursos</a></li>
    <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Orçamentos para jobs</a></li>
-				    <li><a href="https://www.maquiagensbytuani.com/" class="button large wide smooth-scroll-middle">Visite meu site</a></li>
+				    <li><a href="https://blz.to/r/fByr7wnRT5/" class="button large wide smooth-scroll-middle">Visite minha loja na Beleza da Web - cupom 10% OFF: TUANI10</a></li>
                             </ul>
 							<ul class="icons align-center">
                                 <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
@@ -37,7 +37,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/IMG_3045_jpg.JPG" alt="" />
+							<img src="tuani.jpg.JPG" alt="" />
 						</div>
 					</section>
 
