--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="tuani.jpg.JPG" alt="" />
+							<img src="images/tuani2.jpg" alt="" />
 						</div>
 					</section>
 
