--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				       <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Saiba mais sobre cursos</a></li>
    <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Orçamentos para jobs</a></li>
 				    <li><a href="https://blz.to/r/fByr7wnRT5/" class="button large wide smooth-scroll-middle">Minha loja na Beleza da Web</a></li>
-				    <li> <p>Cupom 10% OFF: TUANI10</p></li>
+				<p>Cupom 10% OFF: TUANI10</p>
                             </ul>
 							<ul class="icons align-center">
                                 <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
