--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/tuani2.jpg" alt="" />
+							<img src="images/tuani_2026.jpg" alt="" />
 						</div>
 					</section>
 
@@ -63,3 +63,4 @@
 
 	</body>
 </html>
+
