--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tuani Siqueira &#8211; Maquiadora profissional na Baixada Santista</title>
+		<title>Tuani Siqueira &#8211; Maquiagens e Penteados na Baixada Santista/SP </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 							<p class="major">Maquiadora profissional na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
                             <li><a href="https://shop.maccosmetics.com.br/?artist=bytuanisiqueira" class="button large wide smooth-scroll-middle">Acesse minha loja na M.A.C</a></li>
-                                <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua maquiagem</a></li>
+                                <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua produção</a></li>
 				       <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Saiba mais sobre cursos</a></li>
    <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Orçamentos para jobs</a></li>
 				    <li><a href="https://blz.to/r/fByr7wnRT5/" class="button large wide smooth-scroll-middle">Minha loja na Beleza da Web</a></li>
@@ -63,4 +63,5 @@
 
 	</body>
 </html>
+
 
