--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen orient-center content-align-center image-position-center">
 						<div class="content">
 							<h1>Tuani Siqueira</h1>
-							<p class="major">Maquiadora profissional na Baixada Santista/SP</p>
+							<p class="major"> Maquiagens e Penteados na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
                             <li><a href="https://shop.maccosmetics.com.br/?artist=bytuanisiqueira" class="button large wide smooth-scroll-middle">Acesse minha loja na M.A.C</a></li>
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua produção</a></li>
@@ -35,6 +35,8 @@
                                 <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
                                 <li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								 <li><a href="https://www.tiktok.com/@tuanisiqueira?is_from_webapp=1&sender_device=pc" class="icon brands style2 fa-tiktok"><span class="label">TikTok</span></a></li>
+								
 							</ul>
 						</div>
 						<div class="image">
@@ -63,5 +65,6 @@
 
 	</body>
 </html>
+
 
 
