--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
 							<h1>Tuani Siqueira</h1>
 							<p class="major"> Maquiagens e Penteados na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
-                            <li><a href="https://shop.maccosmetics.com.br/?artist=bytuanisiqueira" class="button large wide smooth-scroll-middle">Acesse minha loja na M.A.C</a></li>
+                            
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua produção</a></li>
+								<li><a href="https://forms.gle/sK4BWQivXY8aRzjZ7" class="button large wide smooth-scroll-middle">Quero ser uma Noiva TS!</a></li>
 				       <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Saiba mais sobre cursos</a></li>
    <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Orçamentos para jobs</a></li>
+
+		<li><a href="https://shop.maccosmetics.com.br/?artist=bytuanisiqueira" class="button large wide smooth-scroll-middle">Acesse minha loja na M.A.C</a></li>
+								
 				    <li><a href="https://blz.to/r/fByr7wnRT5/" class="button large wide smooth-scroll-middle">Minha loja na Beleza da Web</a></li>
 				<p>Cupom 10% OFF: TUANI10</p>
                             </ul>
@@ -68,6 +72,7 @@
 
 	</body>
 </html>
+
 
 
 
