--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+VUta3s2CqAVR8QueSsZl+61r0RC4aIG+a/EuXoRw==" crossorigin="anonymous" referrerpolicy="no-referrer" /
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com">
 
 		
 	</head>
@@ -28,8 +28,8 @@
 							<p class="major"> Maquiagens e Penteados na Baixada Santista/SP</p>
                             <ul class="actions stacked">   
                             
-                                <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua produção</a></li>
-								<li><a href="https://forms.gle/sK4BWQivXY8aRzjZ7" class="button large wide smooth-scroll-middle">Quero ser uma Noiva TS!</a></li>
+                                <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Agende sua produção!</a></li>
+								<li><a href="https://forms.gle/sK4BWQivXY8aRzjZ7" class="button large wide smooth-scroll-middle">Eu quero ser uma Noiva TS!</a></li>
 				       <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Saiba mais sobre cursos</a></li>
    <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="button large wide smooth-scroll-middle">Orçamentos para jobs</a></li>
 
@@ -41,8 +41,10 @@
 							<ul class="icons align-center">
                                 <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-				 <li><a href="https://www.tiktok.com/@tuanisiqueira?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok"></a></li>
-       <li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+<li><a href="https://www.tiktok.com/@tuanisiqueira" target="_blank" aria-label="TikTok"></li>
+    <i class="fa-brands fa-tiktok"></i>
+</a>
 								
 							</ul>
 						</div>
@@ -72,6 +74,7 @@
 
 	</body>
 </html>
+
 
 
 
