--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 				<p>Cupom 10% OFF: TUANI10</p>
                             </ul>
 							<ul class="icons align-center">
-                                <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+                              
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+								  <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-<li><a href="https://www.tiktok.com/@tuanisiqueira" target="_blank" aria-label="TikTok"></li>
-    <i class="fa-brands fa-tiktok"></i>
+<li><a href="https://www.tiktok.com/@tuanisiqueira" target="_blank" aria-label="TikTok">   <i class="fa-brands fa-tiktok"></i></li>
+  
 </a>
 								
 							</ul>
@@ -74,6 +75,7 @@
 
 	</body>
 </html>
+
 
 
 
