--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+VUta3s2CqAVR8QueSsZl+61r0RC4aIG+a/EuXoRw==" crossorigin="anonymous" referrerpolicy="no-referrer" /
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
 		
@@ -43,10 +43,11 @@
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 								  <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 <li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-<li><a href="https://www.tiktok.com/@tuanisiqueira"><i class="fa-brands fa-tiktok"></i><span class="label">TikTok</span></a> </li>
+<li><a href="https://www.tiktok.com/@tuanisiqueira"><i class="fa-brands fa-tiktok"><<span class="label">TikTok</span>/i></a> </li>
   
 
-								
+								<i class="fa-brands fa-tiktok"></i>
+  
 							</ul>
 						</div>
 						<div class="image">
@@ -75,6 +76,7 @@
 
 	</body>
 </html>
+
 
 
 
