--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 								  <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 <li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-<li><a href="https://www.tiktok.com/@tuanisiqueira"><i class="fa-brands fa-tiktok"><<span class="label">TikTok</span>/i></a> </li>
+<li><a href="https://www.tiktok.com/@tuanisiqueira"><i class="fa-brands fa-tiktok"><span class="label">TikTok</span></i></a> </li>
   
-
-								<i class="fa-brands fa-tiktok"></i>
   
 							</ul>
 						</div>
@@ -76,6 +74,7 @@
 
 	</body>
 </html>
+
 
 
 
