--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                                 <li><a href="https://wa.me/message/KAAGXEYGGWDSF1" class="icon brands style2 fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 								  <li><a href="https://www.instagram.com/maquiagensbytuani/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 <li><a href="https://www.facebook.com/maquiagensbytuani" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-<li><a href="https://www.tiktok.com/@tuanisiqueira"><i class="fa-brands fa-tiktok"><span class="label">TikTok</span></i></a> </li>
-  
+ <li><a href="https://www.tiktok.com/@tuanisiqueira" class="icon brands style2 fa-tiktok"><span class="label">TikTok</span></a></li>
   
 							</ul>
 						</div>
@@ -74,6 +73,7 @@
 
 	</body>
 </html>
+
 
 
 
